tests/ui/fail/functions/l10n/en/settings.ftl
number = { NUMBER() }
time = { TIME() }
day = day
